--- a/frontend/src/locales/nl.json
+++ b/frontend/src/locales/nl.json
@@ -1,6 +1,6 @@
 {
   "union_create": {
-    "welcome": "Welcome op",
+    "welcome": "Welkom op",
     "create_community": "Maak een community",
     "fields_required": "* Verplichte velden",
     "name": "Naam *",
