--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -22,5 +22,15 @@
     "register": "Register",
     "already_member": "Already a member?",
     "sign_in": "Sign In"
+  },
+  "login": {
+    "sign_in_union": "Sign in to Union",
+    "username": "Username",
+    "password": "Password",
+    "remember_me": "Remember Me",
+    "sign_in": "Sign in",
+    "dont_have_account": "Don't have an account?",
+    "sign_up": "Sign up",
+    "forgot_password": "Forgot your password?"
   }
 }
