--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -12,5 +12,25 @@
     "icon": "Icon",
     "banner_image": "Banner image",
     "create_button": "Create community"
+  },
+  "register": {
+    "sign_up": "Sign up to Union",
+    "username": "Enter Username",
+    "email": "Enter Email",
+    "password": "Enter Password",
+    "password_confirm": "Repeat Password",
+    "register": "Register",
+    "already_member": "Already a member?",
+    "sign_in": "Sign In"
+  },
+  "login": {
+    "sign_in_union": "Sign in to Union",
+    "username": "Username",
+    "password": "Password",
+    "remember_me": "Remember Me",
+    "sign_in": "Sign in",
+    "dont_have_account": "Don't have an account?",
+    "sign_up": "Sign up",
+    "forgot_password": "Forgot your password?"
   }
 }
