--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -24,7 +24,7 @@
     "sign_in": "Sign In"
   },
   "login": {
-    "sign_in_union": "Sign in to Union",
+    "sign_in_union": "Connect to your account",
     "username": "Username",
     "password": "Password",
     "remember_me": "Remember Me",
