--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -40,7 +40,7 @@
     "online-members": "online",
     "create-post": "Create Post",
     "invite-members": "Invite Members",
-    "created": "Created at",
+    "created": "Created",
     "joined": "Joined"
   }
 }
