Feature/37 login link frontend w backend (#48)
* Styling fixed

* restyled create component. Posts form data to api

* .

* SignIn function is called

* Token is now set in cookie

* try to sign in

* cookies still not set on frontend

* loggin

* Login works and saves cookie. Go to landings page when log in successful

* .

* removed logs and comments

* styling

* unused font faces removed

* linting

* styling

* styling

* Error handling

* lint!

* better error handling

* more linting

* max width

* backend returns user data aigan

* Data flow in vuex, errors are handled, localization works

* cleanup

* loginFormInterface datatype for signIn request

* logs removed

* data json formatted right, bad css practices removed

* linting

--- a/frontend/src/locales/nl.json
+++ b/frontend/src/locales/nl.json
@@ -31,7 +31,11 @@
     "sign_in": "Log in",
     "dont_have_account": "Nog geen account?",
     "sign_up": "Aanmelden",
-    "forgot_password": "Wachtwoord vergeten?"
+    "forgot_password": "Wachtwoord vergeten?",
+    "errors": {
+      "incorrect_username_password": "Incorrecte gebuikersnaam of wachtwoord",
+      "generalized_error_message": "Er ging iets fout, probeer later nog eens."
+    }
   },
   "union_overview": {
     "search": "Zoeken",
