--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -45,5 +45,10 @@
     "invite-members": "Invite Members",
     "created": "Created at",
     "joined": "Joined"
+  },
+  "invite": {
+    "invited": "has invited you to",
+    "accept": "Accept",
+    "decline": "Decline"
   }
 }
