--- a/frontend/src/locales/nl.json
+++ b/frontend/src/locales/nl.json
@@ -42,7 +42,7 @@
     "community-info": "Over de community",
     "members": "leden",
     "online-members": "online",
-    "create-post": "Creeër post",
+    "create-post": "Gecreëerd",
     "invite-members": "Nodig uit",
     "created": "Aangemakt op",
     "joined": "Toegetreden"
