Feature/un 79 frontend accept invite (#58)
* Created component

* Page

* Localization

* Fixed some stuff

* Merge conflict

* Fix

* Small fix

* Space

* 79 -  Component rename

* Pr feedback

Co-authored-by: Koen Lippe <koen.lippe@quicknet.nl>

--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -45,5 +45,10 @@
     "invite-members": "Invite Members",
     "created": "Created",
     "joined": "Joined"
+  },
+  "invite": {
+    "invited": "has invited you to",
+    "accept": "Accept",
+    "decline": "Decline"
   }
 }
