Set all form errors

--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -16,14 +16,17 @@
   "register": {
     "sign_up": "Sign up to Union",
     "username": "Enter Username",
-    "username_already_taken": "Username already taken",
     "email": "Enter Email",
-    "email_already_taken": "Email already taken",
     "password": "Enter Password",
     "password_confirm": "Repeat Password",
     "register": "Register",
     "already_member": "Already a member?",
-    "sign_in": "Sign In"
+    "sign_in": "Sign In",
+    "errors": {
+      "username_already_taken": "Username already taken",
+      "email_already_taken": "Email already taken",
+      "passwords_do_not_match":  "Passwords do not match"
+    }
   },
   "login": {
     "sign_in_union": "Connect to your account",
