--- a/frontend/src/locales/nl.json
+++ b/frontend/src/locales/nl.json
@@ -16,14 +16,17 @@
   "register": {
     "sign_up": "Meld je aan bij Union",
     "username": "Vul je gebruikersnaam in",
-    "username_already_taken": "Gebruikersnaam is al in gebruik",
     "email": "Vul je email in",
-    "email_already_taken": "Email is al in gebruik",
     "password": "Vul je wachtwoord in",
     "password_confirm": "Herhaal wachtwoord",
     "register": "Registreren",
     "already_member": "Al lid?",
-    "sign_in": "Log in"
+    "sign_in": "Log in",
+    "errors": {
+      "username_already_taken": "Gebruikersnaam is al in gebruik",
+      "email_already_taken": "Email is al in gebruik",
+      "passwords_do_not_match": "Wachtwoorden komen niet overeen"
+    }
   },
   "login": {
     "sign_in_union": "Meld je aan bij Union",
