--- a/frontend/src/locales/nl.json
+++ b/frontend/src/locales/nl.json
@@ -25,6 +25,11 @@
     "errors": {
       "username_already_taken": "Gebruikersnaam is al in gebruik",
       "email_already_taken": "Email is al in gebruik",
+      "email_not_valid": "Vul een geldige email in",
+      "password_not_valid": "Je wachtwoord moet uit acht tekens bestaan, minimaal één letter, één cijfer en één speciaal teken",
+      "minimum_characters": "moet minimaal %s karakters bevatten",
+      "username": "Gebruikersnaam",
+      "password": "Wachtwoord",
       "passwords_do_not_match": "Wachtwoorden komen niet overeen"
     }
   },
