--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -31,6 +31,7 @@
     "sign_in": "Sign in",
     "dont_have_account": "Don't have an account?",
     "sign_up": "Sign up",
+    "forgot_password": "Forgot your password?",
     "errors": {
       "incorrect_username_password": "Incorrect username or password",
       "generalized_error_message": "Something went wrong, please try again later."
