removed overpass bold as it was causing issues. Using semibold instead
Also fixed dutch translation on union create page

--- a/frontend/src/locales/nl.json
+++ b/frontend/src/locales/nl.json
@@ -5,7 +5,7 @@
     "fields_required": "* Verplichte velden",
     "name": "Naam *",
     "description": "Beschrijving *",
-    "invite_privilege": "Uitnodiging mogenlijkheden *",
+    "invite_privilege": "Uitnodiging instellingen *",
     "only_i": "Alleen ik kan uitnodigen",
     "everyone": "Iedereen kan uitnodigen *",
     "max_invites": "Leden krijgen maximaal 2 uitnodigingen",
