--- a/frontend/src/locales/nl.json
+++ b/frontend/src/locales/nl.json
@@ -59,5 +59,11 @@
     "post_title": "Titel",
     "post_content": "Inhoud",
     "image": "Afbeelding"
+  },
+  "union_join": {
+    "welcome": "Welkom bij",
+    "to_join": "Om een Union to betreden",
+    "must": "moet je uitnodiging hebben",
+    "or": "of"
   }
 }
