--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -1,4 +1,7 @@
 {
+  "global": {
+    "generalized_error_message": "Something went wrong, please try again later."
+  },
   "union_create": {
     "welcome": "Welcome to",
     "create_community": "Create a community",
@@ -33,7 +36,6 @@
     "sign_up": "Sign up",
     "errors": {
       "incorrect_username_password": "Incorrect username or password",
-      "generalized_error_message": "Something went wrong, please try again later."
     }
   },
   "union_overview": {
@@ -49,7 +51,8 @@
   "invite": {
     "invited": "has invited you to",
     "accept": "Accept",
-    "decline": "Decline"
+    "decline": "Decline",
+    "invalid": "This invite cannot be found or has already been used"
   },
   "create_post": {
     "post": "Post",
