--- a/frontend/src/locales/nl.json
+++ b/frontend/src/locales/nl.json
@@ -1,4 +1,7 @@
 {
+  "global": {
+    "generalized_error_message": "Er ging iets fout, probeer later nog eens."
+  },
   "union_create": {
     "welcome": "Welkom op",
     "create_community": "Maak een community",
@@ -34,7 +37,6 @@
     "forgot_password": "Wachtwoord vergeten?",
     "errors": {
       "incorrect_username_password": "Incorrecte gebuikersnaam of wachtwoord",
-      "generalized_error_message": "Er ging iets fout, probeer later nog eens."
     }
   },
   "union_overview": {
@@ -50,7 +52,8 @@
   "invite": {
     "invited": "heeft je uitgenodigd op",
     "accept": "Accepteren",
-    "decline": "Afwijzen"
+    "decline": "Afwijzen",
+    "invalid": "Deze uitnodiging kan niet gevondenrden of is al gebruikt"
   },
   "create_post": {
     "post": "Post",
