dashboard and union list item

--- a/frontend/src/locales/nl.json
+++ b/frontend/src/locales/nl.json
@@ -61,7 +61,7 @@
     "image": "Afbeelding"
   },
   "union_join": {
-    "welcome": "Welkom bij",
+    "welcome": "Welkom op",
     "to_join": "Om een Union to betreden",
     "must": "moet je uitnodiging hebben",
     "or": "of"
