86 - Added spinner + locale boolean prop

--- a/frontend/src/locales/nl.json
+++ b/frontend/src/locales/nl.json
@@ -53,7 +53,7 @@
     "invited": "heeft je uitgenodigd op",
     "accept": "Accepteren",
     "decline": "Afwijzen",
-    "invalid": "Deze uitnodiging kan niet gevondenrden of is al gebruikt"
+    "invalid": "Deze uitnodiging kan niet worden gevonden of is al gebruikt"
   },
   "create_post": {
     "post": "Post",
