86 - Frontend logic accepting invite (#67)
* 86 - Initial state + api call setup

* 86 - The start of introducing model types

* 86 - Quick backend setup for GET invite

* 86 - Invite info is gathered from backend and shown on page

Backend needs testing and such. POC for now

* 86 - Added tests to backend details route

* 86 - Lint fix

* 86 - Implemented error handling in the component

* 86 - implemented error messages

* 86 - Implemented spinner

* 86 - Fixed styling for details

* 86 - Text align center

* eslint . --fix

* Fixed tests and redirect after accept

* 86 - Added spinner + locale boolean prop

* Second part of the merge

* Fixed name in invitation view and if check on banner

* Lint

* Compile warnings fix (#77)

--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -1,4 +1,7 @@
 {
+  "global": {
+    "generalized_error_message": "Something went wrong, please try again later."
+  },
   "union_create": {
     "welcome": "Welcome to",
     "create_community": "Create a community",
@@ -43,8 +46,7 @@
     "sign_up": "Sign up",
     "forgot_password": "Forgot your password?",
     "errors": {
-      "incorrect_username_password": "Incorrect username or password",
-      "generalized_error_message": "Something went wrong, please try again later."
+      "incorrect_username_password": "Incorrect username or password"
     }
   },
   "union_overview": {
@@ -60,7 +62,8 @@
   "invite": {
     "invited": "has invited you to",
     "accept": "Accept",
-    "decline": "Decline"
+    "decline": "Decline",
+    "invalid": "This invite cannot be found or has already been used"
   },
   "create_post": {
     "post": "Post",
