Feature/un 100 homepage (#79)
* create requests, Generic type for request, routes for unions

* Change url

* Write with prettier

* prettier action for format

* update flow

* update workflow

* prettier for lint

* fix lint errors

* merges conflicts

* landingspage for user without unions

* user select

* component join

* locality + responsive

* dashboard and union list item

* card

* unions cards structure

* image banner inserted from object

* route guards on

* icon vanished

* duplicate + banner

* crypto banner for union overview header

* wrong banner for header

* linting

* styles

Co-authored-by: teunstout <teunstout@hotmail.com>
Co-authored-by: joel <joel_verhagen_1997@hotmail.com>

--- a/frontend/src/locales/nl.json
+++ b/frontend/src/locales/nl.json
@@ -72,5 +72,11 @@
     "post_title": "Titel",
     "post_content": "Inhoud",
     "image": "Afbeelding"
+  },
+  "union_join": {
+    "welcome": "Welkom op",
+    "to_join": "Om een Union to betreden",
+    "must": "moet je uitnodiging hebben",
+    "or": "of"
   }
 }
