UN 94 add create post to union (#72)
* update

* Fixed bug

* Buttons working

* Disable scrolling

* Auto scroll to top

* Removed log

* Pr feedback

* Fixed conflict

--- a/frontend/src/locales/nl.json
+++ b/frontend/src/locales/nl.json
@@ -54,7 +54,7 @@
     "community-info": "Over de community",
     "members": "leden",
     "online-members": "online",
-    "create-post": "Gecreëerd",
+    "create-post": "Post maken",
     "invite-members": "Nodig uit",
     "created": "Aangemakt op",
     "joined": "Toegetreden"
