--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -78,5 +78,13 @@
     "to_join": "To join a Union you",
     "must": "must have an invite",
     "or": "or"
+  },
+  "post": {
+    "posted_by": "Posted by",
+    "comments": "comments",
+    "comment_as": "Comment as",
+    "comment_hint": "Share your thoughts...",
+    "submit": "Submit",
+    "post_not_found": "Post not found"
   }
 }
