--- a/frontend/src/locales/nl.json
+++ b/frontend/src/locales/nl.json
@@ -46,7 +46,7 @@
     "sign_up": "Aanmelden",
     "forgot_password": "Wachtwoord vergeten?",
     "errors": {
-      "incorrect_username_password": "Incorrecte gebuikersnaam of wachtwoord",
+      "incorrect_username_password": "Incorrecte gebuikersnaam of wachtwoord"
     },
     "logout": "Uitloggen"
   },
