renamed route names

--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -89,6 +89,6 @@
     "post_not_found": "Post not found"
   },
   "union-overview": {
-    "joined_unions": "Joined unions"
+    "joined_unions": "Create a union"
   }
 }
