--- a/frontend/src/locales/nl.json
+++ b/frontend/src/locales/nl.json
@@ -89,6 +89,6 @@
     "post_not_found": "Post niet gevonden"
   },
   "union-overview": {
-    "joined_unions": "Jouw unions"
+    "joined_unions": "creëer een union"
   }
 }
