--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -64,7 +64,10 @@
     "invited": "has invited you to",
     "accept": "Accept",
     "decline": "Decline",
-    "invalid": "This invite cannot be found or has already been used"
+    "invalid": "This invite cannot be found or has already been used",
+    "invites_left": "You have %s invite%ss left",
+    "invite_new_member": "Invite new member",
+    "copy_link": "Copy"
   },
   "create_post": {
     "post": "Post",
