--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -89,7 +89,7 @@
     "post_not_found": "Post not found"
   },
   "union-overview": {
-    "joined_unions": "Create a union",
+    "joined_unions": "Your unions",
     "home": "Home"
   }
 }
