--- a/frontend/src/locales/nl.json
+++ b/frontend/src/locales/nl.json
@@ -89,7 +89,7 @@
     "post_not_found": "Post niet gevonden"
   },
   "union-overview": {
-    "joined_unions": "creëer een union",
+    "joined_unions": "Jouw unions",
     "home": "Home"
   }
 }
