--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -4,6 +4,9 @@
   },
   "union_create": {
     "welcome": "Welcome to",
+    "invalid_title": "Title should not be empty and only contain numbers and characters",
+    "invalid_description": "Description can't be empty",
+    "invalid_ratio": "Choose one of the options",
     "create_community": "Create a union",
     "fields_required": "* Fields are required",
     "name": "Name *",
